# prob_wins

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CNAME  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yaml
analysis/: prob_tie_range.py  transformations.py
analysis/case_study/: llamas.py
src/prob_wins/: __init__.py  bayesian.py  frequentist.py
src/prob_wins/utils/: __init__.py  confidence_intervals.py  dirichlet.py  hdi_estimation.py  outcome_counter.py  score_intervals.py  summary.py  validation.py
tests/: bayesian.py  outcome_counter.py  score_intervals.py  test_bayesian.py  test_frequentist.py  validation.py
