[project]
name = "prob-wins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ioverho", email = "ioverho@mailbox.org" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
license = { file = "LICENSE" }
keywords = ["win rate", "statistics", "probabilistic"]

dependencies = ["jaxtyping>=0.3.11", "numpy>=2.4.6", "scipy>=1.17.1"]

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "marimo[recommended]>=0.23.10",
    "matplotlib>=3.11.0",
    "prek>=0.4.5",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "seaborn>=0.13.2",
]

# Linting
# Ruff
[tool.ruff]
extend-exclude = [
    'tests/*',
    '**/mkdocs.py',
    '**/*ignore*/*',
    'docs/**/*.ipynb',
    "**/__init__.py",
]
builtins = ["jtyping"]

line-length = 88
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
ignore = [
    "C408",    # Unnecessary collection call
    "COM812",  # Missing trailing comma, should not be used with formatter
    "D100",    # Undocumented public module
    "D104",    # Undocumented public package
    "D105",    # Undocumented magic method
    "D107",    # Undocumented __init__ method
    "F722",    # Forward annotation error. Conflicts with jaxtyping
    "ICN001",  # Matplotlib should be imported as MPL
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary assign
    "SIM910",  # dict.get with None default
    "TD002",   # Missing TODO author
    "TD003",   # Missing TODO link
    "UP037",   # Removes quotes in type annotations
    "W505",    # Docstring too long
    "TRY003",
    "SIM118",
    "PD011",
    "ARG002",
    "RUF002",
    "G004",
]

extend-select = [
    "A",    # Shadowed builtins
    "ARG",  # Unused arguments
    "B",    # Bugbear
    "BLE",  # Disallow catch-all exceptions
    "C4",   # Catch incorrect use of comprehensions, dict, list, etc
    "COM",  # Enforce trailing comma rules
    "D",    # PyDocStyle
    "DTZ",  # flake8-datetimez
    "E",    # PyCodeStyle errors
    "EXE",  # flake8-executable
    "F",    # Pyflakes rules
    "FA",   # Enforce from __future__ import annotations
    "FBT",  # Boolean traps
    "FLY",  # Flynt rules
    "FURB", # Refurb rules
    "G",    # Flake8-logging-format
    "I",    # Isort
    "ICN",  # Use common import conventions
    "ISC",  # Good use of string concatenation
    "LOG",  # flake8-logging
    "N",    # Naming conventions
    "NPY",  # NumPy specific rules
    "NPY",  # Some numpy-specific things
    "PD",   # Pandas rules
    "PERF", # Performance rules
    "PGH",  # pygrep-hooks
    "PIE",  # flake8-pie
    "PL",   # pylint
    "PT",   # flake8-pytest-style
    "PTH",  # Use pathlib instead of os.path
    "PYI",  # flake8-pyi
    "Q",    # flake8-quotes
    "RET",  # Good return practices
    "RSE",  # flake8-raise
    "RUF",  # Ruff-specific
    "S",    # Security
    "SIM",  # Common simplification rules
    "SLOT", # flake8-slots
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TC",   # Enforce importing certain types in a TYPE_CHECKING block
    "TD",   # Be diligent with TODO comments
    "TID",  # Some good import practices
    "TRY",  # Tryceratops
    "UP",   # Warn if certain things can changed due to newer Python versions
    "W",    # PyCodeStyle warnings
    "YTT",  # flake8-2020
]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) and `F403` (undefined names) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]
# Ignore documentationin tests
"tests/*" = ["D"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
